# langageC

./: CMakeLists.txt  README.md  ai.c  ai.h  game.h  logic.c  logic.h  main.c  menu.c  menu.h  play  readme1.md  rendering.c  rendering.h  score.c  score.h  snake.c  snake.h  window.c  window.h
procedural/: logic.c  logic.h  main.c  makefile  play  rendering.c  rendering.h  snake  snake.c  subgame.c  subgame.h
